--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -54,23 +54,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: catboost in c:\\users\\devsa\\anaconda3\\lib\\site-packages (1.1.1)\n",
-      "Requirement already satisfied: graphviz in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (0.20.1)\n",
-      "Requirement already satisfied: numpy>=1.16.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.23.5)\n",
-      "Requirement already satisfied: pandas>=0.24.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.5.3)\n",
-      "Requirement already satisfied: six in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.16.0)\n",
+      "Requirement already satisfied: catboost in c:\\users\\devsa\\anaconda3\\lib\\site-packages (1.2)\n",
       "Requirement already satisfied: scipy in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.10.0)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (3.7.0)\n",
+      "Requirement already satisfied: six in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.16.0)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.23.5)\n",
+      "Requirement already satisfied: pandas>=0.24 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.5.3)\n",
       "Requirement already satisfied: plotly in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (5.9.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from pandas>=0.24.0->catboost) (2022.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from pandas>=0.24.0->catboost) (2.8.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (0.11.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (22.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (1.0.5)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (1.4.4)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (3.0.9)\n",
+      "Requirement already satisfied: graphviz in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (0.20.1)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (3.7.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from pandas>=0.24->catboost) (2022.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from pandas>=0.24->catboost) (2.8.2)\n",
       "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (4.25.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (3.0.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\devsa\\appdata\\roaming\\python\\python310\\site-packages (from matplotlib->catboost) (23.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (1.0.5)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (0.11.0)\n",
       "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (9.4.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (1.4.4)\n",
       "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from plotly->catboost) (8.0.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -614,22 +614,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 8.2846\n",
-      "- Mean Absolute Error: 6.5150\n",
-      "- R2 Score: 0.7179\n",
+      "- Root Mean Squared Error: 7.8451\n",
+      "- Mean Absolute Error: 6.1850\n",
+      "- R2 Score: 0.7471\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2616\n",
-      "- Mean Absolute Error: 1.8013\n",
-      "- R2 Score: 0.9773\n",
+      "- Root Mean Squared Error: 2.3250\n",
+      "- Mean Absolute Error: 1.8482\n",
+      "- R2 Score: 0.9760\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9950\n",
-      "- Mean Absolute Error: 4.6417\n",
-      "- R2 Score: 0.8523\n",
+      "- Root Mean Squared Error: 5.9933\n",
+      "- Mean Absolute Error: 4.5953\n",
+      "- R2 Score: 0.8524\n",
       "===================================\n",
       "\n",
       "\n",
@@ -661,14 +661,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7863\n",
-      "- Mean Absolute Error: 4.7273\n",
-      "- R2 Score: 0.8515\n",
+      "- Root Mean Squared Error: 5.8124\n",
+      "- Mean Absolute Error: 4.7820\n",
+      "- R2 Score: 0.8501\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.1464\n",
-      "- Mean Absolute Error: 4.7902\n",
-      "- R2 Score: 0.8448\n",
+      "- Root Mean Squared Error: 6.0358\n",
+      "- Mean Absolute Error: 4.8023\n",
+      "- R2 Score: 0.8503\n",
       "===================================\n",
       "\n",
       "\n"
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.852304</td>\n",
+       "      <td>0.852389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -787,7 +787,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.844752</td>\n",
+       "      <td>0.850287</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -807,7 +807,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.717944</td>\n",
+       "      <td>0.747081</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -817,16 +817,16 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.880433\n",
-       "5  Random Forest Regressor  0.852304\n",
+       "5  Random Forest Regressor  0.852389\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.844752\n",
+       "8       AdaBoost Regressor  0.850287\n",
        "1                    Lasso  0.825320\n",
        "6             XGBRegressor  0.821589\n",
        "3    K-Neighbors Regressor  0.783898\n",
-       "4            Decision Tree  0.717944"
+       "4            Decision Tree  0.747081"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1046,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,12 +1057,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3acf1fbc",
+   "cell_type": "markdown",
+   "id": "1403a7f2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Count = (Number of predicted values with |Difference| ≤ 5) / N\n",
+    "\n",
+    "#### Calculate the accuracy percentage:\n",
+    "\n",
+    "#### Accuracy Percentage = Count * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7ddbd13e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counts:  Actual Value       0.67\n",
+      "Predicted Value    0.67\n",
+      "Difference         0.67\n",
+      "dtype: float64 \n"
+     ]
+    }
+   ],
+   "source": [
+    "count= (pred_df[abs(pred_df['Difference']) <= 5].count())/200\n",
+    "print(f\"Counts:  {count} \")\n",
+    "\n",
+    "Accuracy =  count*100\n",
+    "\n",
+    "print(f\"Accuracy of Model: {Accuracy} \")\n"
+   ]
   }
  ],
  "metadata": {
