--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "1383ce79",
    "metadata": {},
    "outputs": [
@@ -56,18 +56,18 @@
      "text": [
       "Requirement already satisfied: catboost in c:\\users\\devsa\\anaconda3\\lib\\site-packages (1.2)\n",
       "Requirement already satisfied: scipy in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.10.0)\n",
-      "Requirement already satisfied: six in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.16.0)\n",
-      "Requirement already satisfied: numpy>=1.16.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.23.5)\n",
-      "Requirement already satisfied: pandas>=0.24 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.5.3)\n",
       "Requirement already satisfied: plotly in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (5.9.0)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.23.5)\n",
       "Requirement already satisfied: graphviz in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (0.20.1)\n",
+      "Requirement already satisfied: pandas>=0.24 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.5.3)\n",
       "Requirement already satisfied: matplotlib in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (3.7.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from pandas>=0.24->catboost) (2022.1)\n",
+      "Requirement already satisfied: six in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from catboost) (1.16.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from pandas>=0.24->catboost) (2.8.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (4.25.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from pandas>=0.24->catboost) (2022.1)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (3.0.9)\n",
       "Requirement already satisfied: packaging>=20.0 in c:\\users\\devsa\\appdata\\roaming\\python\\python310\\site-packages (from matplotlib->catboost) (23.1)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (1.0.5)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (4.25.0)\n",
       "Requirement already satisfied: cycler>=0.10 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (0.11.0)\n",
       "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (9.4.0)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\devsa\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (1.4.4)\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -593,7 +593,13 @@
       "- R2 Score: 0.8806\n",
       "===================================\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
       "- Root Mean Squared Error: 5.7092\n",
@@ -614,22 +620,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.8451\n",
-      "- Mean Absolute Error: 6.1850\n",
-      "- R2 Score: 0.7471\n",
+      "- Root Mean Squared Error: 8.2683\n",
+      "- Mean Absolute Error: 6.5150\n",
+      "- R2 Score: 0.7191\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.3250\n",
-      "- Mean Absolute Error: 1.8482\n",
-      "- R2 Score: 0.9760\n",
+      "- Root Mean Squared Error: 2.3021\n",
+      "- Mean Absolute Error: 1.8414\n",
+      "- R2 Score: 0.9765\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9933\n",
-      "- Mean Absolute Error: 4.5953\n",
-      "- R2 Score: 0.8524\n",
+      "- Root Mean Squared Error: 5.9529\n",
+      "- Mean Absolute Error: 4.6284\n",
+      "- R2 Score: 0.8544\n",
       "===================================\n",
       "\n",
       "\n",
@@ -661,14 +667,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8124\n",
-      "- Mean Absolute Error: 4.7820\n",
-      "- R2 Score: 0.8501\n",
+      "- Root Mean Squared Error: 5.8400\n",
+      "- Mean Absolute Error: 4.7676\n",
+      "- R2 Score: 0.8487\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0358\n",
-      "- Mean Absolute Error: 4.8023\n",
-      "- R2 Score: 0.8503\n",
+      "- Root Mean Squared Error: 6.0278\n",
+      "- Mean Absolute Error: 4.7122\n",
+      "- R2 Score: 0.8507\n",
       "===================================\n",
       "\n",
       "\n"
@@ -734,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -777,7 +783,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.852389</td>\n",
+       "      <td>0.854373</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -787,7 +793,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.850287</td>\n",
+       "      <td>0.850686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -807,7 +813,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.747081</td>\n",
+       "      <td>0.719054</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -817,16 +823,16 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.880433\n",
-       "5  Random Forest Regressor  0.852389\n",
+       "5  Random Forest Regressor  0.854373\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.850287\n",
+       "8       AdaBoost Regressor  0.850686\n",
        "1                    Lasso  0.825320\n",
        "6             XGBRegressor  0.821589\n",
        "3    K-Neighbors Regressor  0.783898\n",
-       "4            Decision Tree  0.747081"
+       "4            Decision Tree  0.719054"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 64,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -875,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -898,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -927,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1052,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "id": "7ddbd13e",
    "metadata": {},
    "outputs": [
@@ -1081,6 +1087,10 @@
       "Counts:  Actual Value       0.67\n",
       "Predicted Value    0.67\n",
       "Difference         0.67\n",
+      "dtype: float64 \n",
+      "Accuracy of Model: Actual Value       67.0\n",
+      "Predicted Value    67.0\n",
+      "Difference         67.0\n",
       "dtype: float64 \n"
      ]
     }
@@ -1092,6 +1102,100 @@
     "Accuracy =  count*100\n",
     "\n",
     "print(f\"Accuracy of Model: {Accuracy} \")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de2a875b",
+   "metadata": {},
+   "source": [
+    "#### Storing Ridge Model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "ea78849a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the Ridge Regression model\n",
+    "from sklearn.linear_model import Ridge\n",
+    "\n",
+    "# Create the Ridge Regression model\n",
+    "ridge_model = Ridge()\n",
+    "ridge_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Store the Ridge Regression model using joblib\n",
+    "import joblib\n",
+    "\n",
+    "# Change the file path to where you want to store the model\n",
+    "model_filename = 'ridge_regression_model.pkl'\n",
+    "joblib.dump(ridge_model, model_filename)\n",
+    "\n",
+    "# Load the stored Ridge Regression model\n",
+    "loaded_ridge_model = joblib.load(model_filename)\n",
+    "\n",
+    "# Extract the one-hot encoded feature names\n",
+    "cat_encoder = preprocessor.named_transformers_['OneHotEncoder']\n",
+    "cat_feature_names = cat_encoder.get_feature_names_out(input_features=cat_features)\n",
+    "\n",
+    "# Combine the one-hot encoded feature names with numerical feature names\n",
+    "feature_names = cat_feature_names.tolist() + num_features.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a599dcd0",
+   "metadata": {},
+   "source": [
+    "#### Feature Importance Analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "1df3625b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'OneHotEncoder' object has no attribute 'get_feature_names'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[71], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m feature_importance \u001b[39m=\u001b[39m loaded_ridge_model\u001b[39m.\u001b[39mcoef_\n\u001b[0;32m      4\u001b[0m \u001b[39m# Create a DataFrame to display the feature importance\u001b[39;00m\n\u001b[0;32m      5\u001b[0m feature_importance_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame({\n\u001b[1;32m----> 6\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mFeature\u001b[39m\u001b[39m'\u001b[39m: preprocessor\u001b[39m.\u001b[39;49mtransformers_[\u001b[39m0\u001b[39;49m][\u001b[39m1\u001b[39;49m]\u001b[39m.\u001b[39;49mget_feature_names(input_features\u001b[39m=\u001b[39mcat_features)\u001b[39m.\u001b[39mtolist()\n\u001b[0;32m      7\u001b[0m               \u001b[39m+\u001b[39m num_features\u001b[39m.\u001b[39mtolist(),\n\u001b[0;32m      8\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mImportance\u001b[39m\u001b[39m'\u001b[39m: feature_importance\n\u001b[0;32m      9\u001b[0m })\n\u001b[0;32m     11\u001b[0m \u001b[39m# Sort the DataFrame by importance in descending order\u001b[39;00m\n\u001b[0;32m     12\u001b[0m feature_importance_df \u001b[39m=\u001b[39m feature_importance_df\u001b[39m.\u001b[39msort_values(by\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mImportance\u001b[39m\u001b[39m'\u001b[39m, ascending\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'OneHotEncoder' object has no attribute 'get_feature_names'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Calculate the feature importance\n",
+    "feature_importance = loaded_ridge_model.coef_\n",
+    "\n",
+    "# Create a DataFrame to display the feature importance\n",
+    "feature_importance_df = pd.DataFrame({\n",
+    "    'Feature': preprocessor.transformers_[0][1].get_feature_names_out(input_features=cat_features).tolist()\n",
+    "              + num_features.tolist(),\n",
+    "    'Importance': feature_importance\n",
+    "})\n",
+    "\n",
+    "# Sort the DataFrame by importance in descending order\n",
+    "feature_importance_df = feature_importance_df.sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "# Display the feature importance\n",
+    "print(\"Feature Importance:\")\n",
+    "print(feature_importance_df)\n",
+    "\n",
+    "# Visualize the feature importance\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x='Importance', y='Feature', data=feature_importance_df)\n",
+    "plt.title('Feature Importance from Ridge Regression Model')\n",
+    "plt.xlabel('Importance')\n",
+    "plt.ylabel('Feature')\n",
+    "plt.show()"
    ]
   }
  ],
